# ALR

./: .gitignore  BridgePier_Test.inp  LICENSE  MANIFEST.in  PCSWMM_Quantum_AutoDetect.py  PHYSICS_VS_EMPIRICAL.md  QuantumTest_PCSWMM.inp  QuantumTest_Simple.chi  QuantumTest_Simple.db  QuantumTest_Simple.inp  QuantumTest_Simple.out  QuantumTest_Simple.rpt  Quantum_Fluid-G.py  Quantum_Fluid.py  README.md  VALIDATION_REPORT.txt  generate_fig5_vortex_particles.py  generate_icwmm_paper.py  generate_scour_validation_paper.py  generate_technical_note.py  generate_trr_paper.py  pyproject.toml  quick_analysis.py  run_alr_study.py  run_benchmark_validation.py  run_engineering_scenarios.py  run_headless_2d.py  run_headless_swmm.py  run_headless_test.py  run_quantum_pcswmm.py  run_scour_benchmarks.py  run_sediment_transport.py  setup.py  test.py  validation_summary.csv  verify_package.py
ALR/: ALR_Proof_Points.ipynb  ALR_Simulation_Master.py  quantum_hydraulics.py
quantum_hydraulics/: LIMITATIONS.md  README.md  __init__.py  __main__.py  analysis.py  requirements.txt
quantum_hydraulics/core/: __init__.py  hydraulics.py  particle.py  pier_shedding.py  vortex_field.py
quantum_hydraulics/demos/: __init__.py  conceptual_demo.py  engineering_demo.py
quantum_hydraulics/integration/: __init__.py  pcswmm_script.py  sediment_transport.py  swmm_2d.py  swmm_node.py
quantum_hydraulics/reporting/: __init__.py  report_generator.py
quantum_hydraulics/research/: __init__.py  alr_experiments.py  engineering_metrics.py  engineering_scenarios.py  sediment_scenarios.py
quantum_hydraulics/validation/: __init__.py  analytical.py  benchmark_scenarios.py  benchmarks.py  hec18_scour.py
quantum_hydraulics/visualization/: __init__.py  export.py  interactive.py  renderers.py  theme.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_analysis.py  test_hydraulics.py  test_hydraulics_extended.py  test_particle.py  test_particle_extended.py  test_swmm_node.py  test_vortex_field.py  test_vortex_field_extended.py
tests/validation/: __init__.py  test_analytical.py
